--- a/time-stamp/index.html
+++ b/time-stamp/index.html
@@ -21,12 +21,12 @@
        
         <center>
 
-        <div id="row1"><i class="far fa-sun"></i>
-        <h2 class="fa-sun">Dark</h2></div>
+        <div id="row1"><i class="far fa-moon animate__fadeIn"></i>
+        <h2 class="fa-moon animate__fadeIn">Dark</h2></div>
         
         <div id="row2">
-        <i class="far fa-flag"></i>
-        <h2 class="fa-flag">Spanish</h2></div>
+        <i class="fas fa-language animate__fadeIn"></i>
+        <h2 class="fa-language animate__fadeIn">Spanish</h2></div>
 
 
         <h1 id="horaUnix" class="wow animate__fadeIn" style="animation-duration: 3s;"></h1>
