--- a/index.html
+++ b/index.html
@@ -78,7 +78,7 @@
             <h1 style="font-size: 13vw;">Time-Stamp</h1>
             <h3 id="elemento7">Time-stamp real time clock.</h3>
             <a href="https://github.com/Bescri/time-stamp">
-              <i id="iElement" class="fas fa-clock pondeg" style="opacity: 1; font-size: 4em;"></i></a>
+            <i id="iElement" class="fas fa-clock pondeg" style="opacity: 1; font-size: 4em;"></i></a>
             <h5 id="elemento8">Touch the clock to go to the repository.</h5>
             <h2 id="elemento9">Plataform: Web Reponsive</h2>
             <h4 id="elemento10">Written in: JavaScript</h4>
@@ -92,17 +92,8 @@
       <h2 id="elemento13">Plataform: Android 2.6+</h2>
       <h4 id="elemento14">Written in: Java, JavaScript</h4>
 
-
- 
-      
-
-      <div id="actividad" class="wow animate__fadeInBottomLeft">
-      <a class="linked"></a>
-
-    </div>
-
   
-    <div id="formacion" class="wow animate__slideInUp">
+    <div id="formacion" class="fade-in">
     <h1 id="elemento15">College Education</h1>
     <h1></h1>
     <h2>2019 - 2020</h2>
@@ -116,7 +107,7 @@
     </div>
 
 
-      <div id="contacto" class="wow animate__slideInUp">
+      <div id="contacto" class="fade-in">
 
       <h1 id="elemento21">Contact</h1>
       
