--- a/index.html
+++ b/index.html
@@ -36,20 +36,20 @@
       <i class="fas fa-language fade-in" id="iElement" style="animation-duration: 2s;"></i>
       
 
-  <a href="#" id="moon">
+  <a href="#" id="moon" >
   <i class="far fa-moon fade-in" id="iElement" style="animation-duration: 2s;"></i></a>
   </div>
 
 
   <a id="elemento23" class="roll fade-in" style="animation-duration: 2s;">"If you're going to try, go all the way. Otherwise, don't even start."</a>
-  <a class="charles fade-in"style="animation-duration: 2.5s;">Roll the Dice, Charles Bukowski.</a>
+  <a class="charles fade-in"style="animation-duration: 4s;">Roll the Dice, Charles Bukowski.</a>
 
     <div class="sobremi fade-in">
       <img src="Foto.jpg" class="fotoYo fade-in"/>
 
-        <h1 id="elemento1">Hi</h1>
-        <h2 id="elemento2">I'm Bastián Escribano</a>
-        <h3 id="elemento24" class="fade-in" style="animation-duration: 2s;"></a>
+        <h1 id="elemento1" class="fade-in" style="animation-duration: 2s;" >Hi</h1>
+        <h2 id="elemento2" class="fade-in" style="animation-duration: 3s;">I'm Bastián Escribano</a>
+        <h3 id="elemento24" class="fade-in" style="animation-duration: 4s;"></a>
     
           <h2 id="elemento25" class="lenguages fade-in" style="animation-duration: 3s;">Stack and Skills</h2>
           <div class="exp wow animate__slideInUp"> 
