--- a/index.html
+++ b/index.html
@@ -80,7 +80,7 @@
             <a href="https://github.com/Bescri/time-stamp">
             <i id="iElement" class="fas fa-clock pondeg" style="opacity: 1; font-size: 4em;"></i></a>
             <h5 id="elemento8">Touch the clock to go to the repository.</h5>
-            <h2 id="elemento9">Plataform: Web Reponsive</h2>
+            <h2 id="elemento9">Plataform: Web</h2>
             <h4 id="elemento10">Written in: JavaScript</h4>
 
 
@@ -101,7 +101,7 @@
     <h2 id="elemento17">Computer and Software Engenieering</h2>
     <h1></h1>
     <h2 id="elemento18">2020 - Now</h2>
-    <h2 id="elemento19">University of Santiago de Chile</h2>
+    <h2 id="elemento19">University of Santiago</h2>
     <h2 id="elemento20">Computer and Software Engenieering</h2>
 
     </div>
