--- a/time-stamp/index.html
+++ b/time-stamp/index.html
@@ -21,17 +21,14 @@
        
         <center>
 
-        <div id="row1"><i class="far fa-moon"></i>
-        <h2 class="fa-moon animate__fadeIn">Dark</h2></div>
-        
-        <div id="row2">
-        <i class="fas fa-language"></i>
-        <h2 class="fa-language animate__fadeIn">Spanish</h2></div>
+        <div class="botones">
 
-
+    <a href="#" id="language"><i id="iLan" class="fas fa-language fade-in"  style="animation-duration: 2s;"></i></a>
+        <a href="#" id="moon"><i id="iMoon" class="far fa-moon fade-in"  style="animation-duration: 2s;"></i></a></div>
         <h1 id="horaUnix" class="wow animate__fadeIn" style="animation-duration: 3s;"></h1>
         <h2 id="info" class="wow animate__fadeIn" style="animation-duration: 3s;"></h2>
         <i id="git"></i>
+        <i id="code"></i>
     <footer class="wow animate__fadeIn" style="animation-duration: 3s;"><a id="footer"></a></footer></center>
 <script src="js/jquery.js"></script>
 <script src="js/load.js"></script>
