--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
         <h2 id="elemento2" class="fade-in" style="animation-duration: 3s;">I'm Bastián Escribano</a>
         <h3 id="elemento24" class="fade-in" style="animation-duration: 4s;"></a>
     
-          <h2 id="elemento25" class="lenguages fade-in" style="animation-duration: 3s;">Stack and Skills</h2>
+          <h2 id="elemento25" class="lenguages fade-in" style="animation-duration: 3s;">Stack & Skills</h2>
           <div class="exp wow animate__slideInUp"> 
     <i class="fab fa-html5" id="iElement"></i>
     <i class="fab fa-css3-alt" id="iElement"></i>
